# webwalker

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  output.rs  types.rs
src/cli/: mod.rs
src/crawler/: crawl.rs  fetcher.rs  mod.rs  parser.rs  visited.rs
src/tests/: crawl.rs  integration.rs  parser.rs
