[package]
name = "rusty_crawler"
path = "src/lib.rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "stream"] }
scraper = "0.18"
thiserror = "1.0"
url = "2.5"
futures = "0.3"  
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"

[dev-dependencies]
tokio        = { version = "1.38", features = ["full"] }
tempfile     = "3"
